Bug 6820: Xlib shouldn't handle EAGAIN as a fatal IO error

X.Org Bug #6820 <http://bugs.freedesktop.org/show_bug.cgi?id=6820>
Patch #17637 <http://bugs.freedesktop.org/attachment.cgi?id=17637>

Signed-off-by: Alan Coopersmith <alan.coopersmith@sun.com>